--- a/index.css
+++ b/index.css
@@ -47,3 +47,22 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-cards{
+    width: 100px;
+    height: 400px;
+    background-color: #f0f0f0;
+    margin: 20px;
+}
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.login{
+    padding: 20;
+    cursor: pointer;
+}
+.filter{
+    display: flex;
+}
