--- a/index.css
+++ b/index.css
@@ -1,73 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-.nav-items{
-    font-size: 24px;
-}
-.nav-items >ul{
-    display: flex;
-    list-style-type: none;    
-}
-
-.nav-items >ul>li {
-    padding: 10px;
-    margin: 10px;
-}
-
-.res-card {
-    width: 200px;
-    
-    padding: 5px;
-    margin: 5px;
-}
-.res-card:hover{
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-
-.search {
-    padding: 10px;
-}
-
-.logoImage{
-    width: 200px;
-}
-.resImage{
-    width: 200px;
-}
-.filter-btn{
-    margin: 10px;
-    cursor: pointer;
-}
-
-.shimmer-cards{
-    width: 100px;
-    height: 400px;
-    background-color: #f0f0f0;
-    margin: 20px;
-}
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.login{
-    padding: 20;
-    cursor: pointer;
-}
-.filter{
-    display: flex;
-}
-
-.user-card{
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
